--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@sveltejs/vite-plugin-svelte": "^6.0.0",
     "svelte": "^5.35.5",
     "vite": "^7.0.4"
+  },
+  "dependencies": {
+    "axios": "^1.10.0",
+    "uuid": "^11.1.0"
   }
 }
