Converting images to webp, fixing page overload with images displayed by displating none of none visible elements

--- a/public/menu/manifest.json
+++ b/public/menu/manifest.json
@@ -1,16 +1,16 @@
 {
   "images": [
-    { "id": 1, "url": "/menu/image1.jpg" },
-    { "id": 2, "url": "/menu/image2.jpg" },
-    { "id": 3, "url": "/menu/image3.jpg" },
-    { "id": 4, "url": "/menu/image4.jpg" },
-    { "id": 5, "url": "/menu/image5.jpg" },
-    { "id": 6, "url": "/menu/image6.jpg" },
-    { "id": 7, "url": "/menu/image7.jpg" },
-    { "id": 8, "url": "/menu/image8.jpg" }
+    { "id": 1, "url": "/menu/image1.webp" },
+    { "id": 2, "url": "/menu/image2.webp" },
+    { "id": 3, "url": "/menu/image3.webp" },
+    { "id": 4, "url": "/menu/image4.webp" },
+    { "id": 5, "url": "/menu/image5.webp" },
+    { "id": 6, "url": "/menu/image6.webp" },
+    { "id": 7, "url": "/menu/image7.webp" },
+    { "id": 8, "url": "/menu/image8.webp" }
   ],
   "blank": {
     "id": "blank-page",
-    "url": "/menu/blank.svg"
+    "url": "/menu/blank.webp"
   }
 }
